Test with unicode uft arrows

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -180,17 +180,21 @@
 		</table>
 		<div class="frogaFooter">
 			<img id="aUp" class="frogaImage" src="res/img/a_up.gif" border="0" onclick="moveFrog('up')" />
+			<span id="fUp" class="frogMove" onclick="moveFrog('up')">&#x1f881;</span>
 		</div>
 		<div class="frogaFooter">
 			<span id="spanLeft" align="left" valign="middle">
 				<img id="aLeft" class="frogaImage" src="res/img/a_left.gif" border="0" onclick="moveFrog('left')" />
+				<span id="fLeft" class="frogMove" onclick="moveFrog('left')">&#x1f880;</span>
 			</span>
 			<span id="spanRight" align="right" valign="middle">
 				<img id="aRight" src="res/img/a_right.gif" border="0" onclick="moveFrog('right')" />
+				<span id="fRight" class="frogMove" onclick="moveFrog('right')">&#x1f882;</span>
 			</span>
 		</div>
 		<div class="frogaFooter">
 			<img id="aDown" class="frogaImage" src="res/img/a_down.gif" border="0" onclick="moveFrog('down')" />
+			<span id="fDown" class="frogMove" onclick="moveFrog('down')">&#x1f883;</span>
 		</div>
 		<!-- pre id="frogPre"></pre -->
 	</div>
